[gd_scene load_steps=7 format=3 uid="uid://cgu0dw285b5nj"]

[ext_resource type="Script" path="res://scenes/ScoreList/scorelist.gd" id="1_u4kl8"]
[ext_resource type="Texture2D" uid="uid://cps4irbjkxek0" path="res://img/background/back.jpg" id="2_27475"]
[ext_resource type="FontFile" uid="uid://cw4i3i5gly5i" path="res://font/mplus-1c-regular.ttf" id="3_1qthb"]

[sub_resource type="LabelSettings" id="LabelSettings_n8aol"]
font = ExtResource("3_1qthb")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_77s5y"]
font = ExtResource("3_1qthb")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_an51p"]
font = ExtResource("3_1qthb")

[node name="Ranking" type="Node"]
script = ExtResource("1_u4kl8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1200.0
offset_bottom = 740.0
texture = ExtResource("2_27475")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 740.0
color = Color(0, 0, 0, 0.470588)
metadata/_edit_lock_ = true

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 740.0
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Ui"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 560.0
metadata/_edit_lock_ = true

[node name="ScoreListVBox" type="VBoxContainer" parent="Ui/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1198, 0)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
alignment = 1

[node name="UserName" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ああああああああああああああああああああ"
label_settings = SubResource("LabelSettings_n8aol")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "スコア：000000"
label_settings = SubResource("LabelSettings_77s5y")
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
alignment = 1

[node name="GrassTree" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "草を枯らした回数：0回,　木を枯らした回数：0回"
label_settings = SubResource("LabelSettings_n8aol")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CarHit" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "車に轢かれた回数：0回"
label_settings = SubResource("LabelSettings_77s5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
alignment = 1

[node name="UserName" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "FairyMD"
label_settings = SubResource("LabelSettings_n8aol")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "スコア：000000"
label_settings = SubResource("LabelSettings_77s5y")
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
alignment = 1

[node name="GrassTree" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "草を枯らした回数：0回,　木を枯らした回数：0回"
label_settings = SubResource("LabelSettings_n8aol")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CarHit" type="Label" parent="Ui/ScrollContainer/ScoreListVBox/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "車に轢かれた回数：0回"
label_settings = SubResource("LabelSettings_77s5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Ui"]
layout_mode = 0
offset_top = 560.0
offset_right = 1200.0
offset_bottom = 740.0
alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonsContainer" type="VBoxContainer" parent="Ui/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/HBoxContainer/ButtonsContainer"]
layout_mode = 2

[node name="GamemodeSelector" type="HBoxContainer" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer/GamemodeSelector"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "ゲームモード："
label_settings = SubResource("LabelSettings_an51p")
horizontal_alignment = 2

[node name="GamemodeOptionButton" type="OptionButton" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer/GamemodeSelector"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1qthb")
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "スコア"
popup/item_0/id = 0
popup/item_1/text = "タイム"
popup/item_1/id = 1

[node name="DifficultySelector" type="HBoxContainer" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer/DifficultySelector"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "難易度："
label_settings = SubResource("LabelSettings_an51p")
horizontal_alignment = 1

[node name="DifficultyOptionButton" type="OptionButton" parent="Ui/HBoxContainer/ButtonsContainer/VBoxContainer/DifficultySelector"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1qthb")
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "ノーマル"
popup/item_0/id = 0
popup/item_1/text = "ハード"
popup/item_1/id = 1

[node name="RefreshDataButton" type="Button" parent="Ui/HBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "データを更新する"

[node name="BackToTheTitleButton" type="Button" parent="Ui/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "タイトル画面にもどる"

[node name="RefreshCooldownTimer" type="Timer" parent="."]

[connection signal="pressed" from="Ui/HBoxContainer/ButtonsContainer/RefreshDataButton" to="." method="_on_refresh_data_button_pressed"]
[connection signal="pressed" from="Ui/HBoxContainer/ButtonsContainer/BackToTheTitleButton" to="." method="_on_back_to_the_title_button_pressed"]
